<resources>
    <string name="app_name">Rada</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Customize</string>

    <!-- Preference Titles -->
    <string name="profile_header">Profile</string>
    <string name="preference_header">Preferences</string>

    <!-- Profile Preferences -->
    <string name="profile_name">Your Name</string>
    <string name="location">Current Location</string>

    <!-- keys -->
    <string name="location_key">location_key</string>
    <string name="profile_name_key">profile_key</string>
    <string name="units_key">units_key</string>

    <!--  Preferences -->
    <string name="preference_title">Units</string>
    <string name="default_location">Nairobi, Kenya</string>
    <string name="default_units">Metric</string>
    <string name="map_key">nairobi_map</string>

</resources>