<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.Rada20">

    <PreferenceCategory
        android:theme="@style/Theme.Rada20"
        app:title="@string/profile_header"
        android:layout="@layout/pref_heading_style"
        >

        <EditTextPreference
            android:theme="@style/Theme.Rada20"
            app:icon="@drawable/ic_baseline_person_24"
            app:key="signature"
            app:title="@string/profile_name"
            app:useSimpleSummaryProvider="true" />
            <EditTextPreference
            android:title="@string/location"
            android:key="@string/location_key"
            android:summary="Your location"
            android:icon="@drawable/ic_baseline_location_on_24"></EditTextPreference>



    </PreferenceCategory>

    <PreferenceCategory
        android:clipToPadding="false"
        android:layout="@layout/pref_heading_style"
        android:theme="@style/Theme.Rada20"
        app:title="@string/preference_header">


        <ListPreference
            android:defaultValue="@string/default_units"
            app:entries="@array/units_entries"
            app:entryValues="@array/units_values"
            app:icon="@drawable/ic_baseline_ac_unit_24"
            app:key="@string/units_key"
            app:title="@string/preference_title"
            app:useSimpleSummaryProvider="true" />



    </PreferenceCategory>

</PreferenceScreen>